test(command): use spring context for extension command tests