@@ -2,39 +2,54 @@ package com.seed4j.cli.command.infrastructure.primary;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.seed4j.cli.SystemOutputCaptor;
-import com.seed4j.cli.UnitTest;
+import com.seed4j.cli.IntegrationTest;
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Comparator;
 import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
+import java.util.stream.Stream;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.boot.test.context.runner.ApplicationContextRunner;
-import org.springframework.context.annotation.ComponentScan;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.FilterType;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.system.CapturedOutput;
+import org.springframework.boot.test.system.OutputCaptureExtension;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
 import picocli.CommandLine;
 
-@UnitTest
+@ExtendWith(OutputCaptureExtension.class)
+@IntegrationTest
 class Seed4JCommandsSpringContextTest {
 
   private static final String DISTRIBUTION_ID = "company-extension";
   private static final String DISTRIBUTION_VERSION = "1.0.0";
+  private static final Path USER_HOME = temporaryDirectory();
 
-  private final ApplicationContextRunner contextRunner = new ApplicationContextRunner().withUserConfiguration(
-    ExtensionInstallSpringContextConfiguration.class
-  );
+  @Autowired
+  private Seed4JCommandsFactory commandsFactory;
+
+  @DynamicPropertySource
+  static void registerProperties(DynamicPropertyRegistry registry) {
+    registry.add("user.home", USER_HOME::toString);
+  }
+
+  @BeforeEach
+  void cleanUserHomeConfiguration() throws IOException {
+    deleteRecursively(USER_HOME.resolve(".config/seed4j-cli"));
+  }
 
   @Test
-  void shouldInstallExtensionRuntimeUsingSpringManagedCommandGraph() throws IOException {
-    Path userHome = Files.createTempDirectory("seed4j-cli-extension-install-spring-context-");
-    Path extensionJarPath = createFatJar(userHome.resolve("company-extension.jar"));
-    Path configPath = userHome.resolve(".config/seed4j-cli/config.yml");
-    Path runtimeJarPath = userHome.resolve(".config/seed4j-cli/runtime/active/extension.jar");
-    Path metadataPath = userHome.resolve(".config/seed4j-cli/runtime/active/metadata.yml");
+  void shouldInstallExtensionRuntimeUsingSpringManagedCommandGraph(CapturedOutput output) throws IOException {
+    Path extensionJarPath = createFatJar(USER_HOME.resolve("company-extension.jar"));
+    Path configPath = USER_HOME.resolve(".config/seed4j-cli/config.yml");
+    Path runtimeJarPath = USER_HOME.resolve(".config/seed4j-cli/runtime/active/extension.jar");
+    Path metadataPath = USER_HOME.resolve(".config/seed4j-cli/runtime/active/metadata.yml");
     String[] args = {
       "extension",
       "install",
@@ -45,34 +60,23 @@ class Seed4JCommandsSpringContextTest {
       DISTRIBUTION_VERSION,
     };
 
-    contextRunner
-      .withPropertyValues("user.home=" + userHome)
-      .run(context -> {
-        Seed4JCommandsFactory commandsFactory = context.getBean(Seed4JCommandsFactory.class);
+    int exitCode = commandLine().execute(args);
 
-        try (SystemOutputCaptor outputCaptor = new SystemOutputCaptor()) {
-          CommandLine commandLine = new CommandLine(commandsFactory.buildCommandSpec());
-          int exitCode = commandLine.execute(args);
-
-          assertThat(exitCode).isZero();
-          assertThat(outputCaptor.getStandardOutput()).contains("Extension runtime installed successfully.");
-        }
-
-        assertThat(configPath).exists();
-        assertThat(Files.readString(configPath)).contains("mode: extension");
-        assertThat(runtimeJarPath).exists();
-        assertThat(Files.readAllBytes(runtimeJarPath)).isEqualTo(Files.readAllBytes(extensionJarPath));
-        assertThat(metadataPath).exists();
-        assertThat(Files.readString(metadataPath)).contains("id: " + DISTRIBUTION_ID).contains("version: " + DISTRIBUTION_VERSION);
-      });
+    assertThat(exitCode).isZero();
+    assertThat(output.getOut()).contains("Extension runtime installed successfully.");
+    assertThat(configPath).exists();
+    assertThat(Files.readString(configPath)).contains("mode: extension");
+    assertThat(runtimeJarPath).exists();
+    assertThat(Files.readAllBytes(runtimeJarPath)).isEqualTo(Files.readAllBytes(extensionJarPath));
+    assertThat(metadataPath).exists();
+    assertThat(Files.readString(metadataPath)).contains("id: " + DISTRIBUTION_ID).contains("version: " + DISTRIBUTION_VERSION);
   }
 
   @Test
-  void shouldEnableExtensionRuntimeUsingSpringManagedCommandGraph() throws IOException {
-    Path userHome = Files.createTempDirectory("seed4j-cli-extension-enable-spring-context-");
-    Path configPath = userHome.resolve(".config/seed4j-cli/config.yml");
-    Path runtimeJarPath = userHome.resolve(".config/seed4j-cli/runtime/active/extension.jar");
-    Path metadataPath = userHome.resolve(".config/seed4j-cli/runtime/active/metadata.yml");
+  void shouldEnableExtensionRuntimeUsingSpringManagedCommandGraph(CapturedOutput output) throws IOException {
+    Path configPath = USER_HOME.resolve(".config/seed4j-cli/config.yml");
+    Path runtimeJarPath = USER_HOME.resolve(".config/seed4j-cli/runtime/active/extension.jar");
+    Path metadataPath = USER_HOME.resolve(".config/seed4j-cli/runtime/active/metadata.yml");
     Files.createDirectories(configPath.getParent());
     Files.createDirectories(runtimeJarPath.getParent());
     Files.writeString(
@@ -94,30 +98,18 @@ class Seed4JCommandsSpringContextTest {
     );
     String[] args = { "extension", "enable" };
 
-    contextRunner
-      .withPropertyValues("user.home=" + userHome)
-      .run(context -> {
-        Seed4JCommandsFactory commandsFactory = context.getBean(Seed4JCommandsFactory.class);
+    int exitCode = commandLine().execute(args);
 
-        try (SystemOutputCaptor outputCaptor = new SystemOutputCaptor()) {
-          CommandLine commandLine = new CommandLine(commandsFactory.buildCommandSpec());
-          int exitCode = commandLine.execute(args);
-
-          assertThat(exitCode).isZero();
-          assertThat(outputCaptor.getStandardOutput())
-            .contains("Extension runtime enabled successfully.")
-            .contains("Config: " + configPath);
-        }
-
-        assertThat(Files.readString(configPath)).contains("mode: extension");
-      });
+    assertThat(exitCode).isZero();
+    assertThat(output.getOut()).contains("Extension runtime enabled successfully.").contains("Config: " + configPath);
+    assertThat(Files.readString(configPath)).contains("mode: extension");
   }
 
   @Test
-  void shouldReturnNonZeroAndNotChangeConfigWhenEnablingInvalidExtensionRuntimeUsingSpringManagedCommandGraph() throws IOException {
-    Path userHome = Files.createTempDirectory("seed4j-cli-extension-enable-spring-context-");
-    Path configPath = userHome.resolve(".config/seed4j-cli/config.yml");
-    Path runtimeJarPath = userHome.resolve(".config/seed4j-cli/runtime/active/extension.jar");
+  void shouldReturnNonZeroAndNotChangeConfigWhenEnablingInvalidExtensionRuntimeUsingSpringManagedCommandGraph(CapturedOutput output)
+    throws IOException {
+    Path configPath = USER_HOME.resolve(".config/seed4j-cli/config.yml");
+    Path runtimeJarPath = USER_HOME.resolve(".config/seed4j-cli/runtime/active/extension.jar");
     Files.createDirectories(configPath.getParent());
     Files.createDirectories(runtimeJarPath.getParent());
     String originalConfig = """
@@ -129,30 +121,19 @@ class Seed4JCommandsSpringContextTest {
     createFatJar(runtimeJarPath);
     String[] args = { "extension", "enable" };
 
-    contextRunner
-      .withPropertyValues("user.home=" + userHome)
-      .run(context -> {
-        Seed4JCommandsFactory commandsFactory = context.getBean(Seed4JCommandsFactory.class);
+    int exitCode = commandLine().execute(args);
 
-        try (SystemOutputCaptor outputCaptor = new SystemOutputCaptor()) {
-          CommandLine commandLine = new CommandLine(commandsFactory.buildCommandSpec());
-          int exitCode = commandLine.execute(args);
-
-          assertThat(exitCode).isNotZero();
-          assertThat(outputCaptor.getStandardError()).contains("Invalid runtime metadata file");
-          assertThat(outputCaptor.getStandardOutput()).doesNotContain("Extension runtime enabled successfully.");
-        }
-
-        assertThat(Files.readString(configPath)).isEqualTo(originalConfig);
-      });
+    assertThat(exitCode).isNotZero();
+    assertThat(output.getErr()).contains("Invalid runtime metadata file");
+    assertThat(output.getOut()).doesNotContain("Extension runtime enabled successfully.");
+    assertThat(Files.readString(configPath)).isEqualTo(originalConfig);
   }
 
   @Test
-  void shouldDisableExtensionRuntimeAndPreserveArtifactsUsingSpringManagedCommandGraph() throws IOException {
-    Path userHome = Files.createTempDirectory("seed4j-cli-extension-disable-spring-context-");
-    Path configPath = userHome.resolve(".config/seed4j-cli/config.yml");
-    Path runtimeJarPath = userHome.resolve(".config/seed4j-cli/runtime/active/extension.jar");
-    Path metadataPath = userHome.resolve(".config/seed4j-cli/runtime/active/metadata.yml");
+  void shouldDisableExtensionRuntimeAndPreserveArtifactsUsingSpringManagedCommandGraph(CapturedOutput output) throws IOException {
+    Path configPath = USER_HOME.resolve(".config/seed4j-cli/config.yml");
+    Path runtimeJarPath = USER_HOME.resolve(".config/seed4j-cli/runtime/active/extension.jar");
+    Path metadataPath = USER_HOME.resolve(".config/seed4j-cli/runtime/active/metadata.yml");
     Files.createDirectories(runtimeJarPath.getParent());
     createFatJar(runtimeJarPath);
     Files.writeString(
@@ -167,59 +148,36 @@ class Seed4JCommandsSpringContextTest {
     String metadataContentBeforeDisable = Files.readString(metadataPath);
     String[] args = { "extension", "disable" };
 
-    contextRunner
-      .withPropertyValues("user.home=" + userHome)
-      .run(context -> {
-        Seed4JCommandsFactory commandsFactory = context.getBean(Seed4JCommandsFactory.class);
+    int exitCode = commandLine().execute(args);
 
-        try (SystemOutputCaptor outputCaptor = new SystemOutputCaptor()) {
-          CommandLine commandLine = new CommandLine(commandsFactory.buildCommandSpec());
-          int exitCode = commandLine.execute(args);
-
-          assertThat(exitCode).isZero();
-          assertThat(outputCaptor.getStandardOutput())
-            .contains("Extension runtime disabled successfully.")
-            .contains("Config: " + configPath);
-        }
-
-        assertThat(configPath).exists();
-        assertThat(Files.readString(configPath)).contains("mode: standard");
-        assertThat(Files.readAllBytes(runtimeJarPath)).isEqualTo(runtimeJarContentBeforeDisable);
-        assertThat(Files.readString(metadataPath)).isEqualTo(metadataContentBeforeDisable);
-      });
+    assertThat(exitCode).isZero();
+    assertThat(output.getOut()).contains("Extension runtime disabled successfully.").contains("Config: " + configPath);
+    assertThat(configPath).exists();
+    assertThat(Files.readString(configPath)).contains("mode: standard");
+    assertThat(Files.readAllBytes(runtimeJarPath)).isEqualTo(runtimeJarContentBeforeDisable);
+    assertThat(Files.readString(metadataPath)).isEqualTo(metadataContentBeforeDisable);
   }
 
   @Test
-  void shouldReturnNonZeroAndPreserveInvalidConfigWhenDisablingUsingSpringManagedCommandGraph() throws IOException {
-    Path userHome = Files.createTempDirectory("seed4j-cli-extension-disable-spring-context-");
-    Path configPath = userHome.resolve(".config/seed4j-cli/config.yml");
+  void shouldReturnNonZeroAndPreserveInvalidConfigWhenDisablingUsingSpringManagedCommandGraph(CapturedOutput output) throws IOException {
+    Path configPath = USER_HOME.resolve(".config/seed4j-cli/config.yml");
     Files.createDirectories(configPath.getParent());
     Files.writeString(configPath, "seed4j: [broken");
     String[] args = { "extension", "disable" };
 
-    contextRunner
-      .withPropertyValues("user.home=" + userHome)
-      .run(context -> {
-        Seed4JCommandsFactory commandsFactory = context.getBean(Seed4JCommandsFactory.class);
+    int exitCode = commandLine().execute(args);
 
-        try (SystemOutputCaptor outputCaptor = new SystemOutputCaptor()) {
-          CommandLine commandLine = new CommandLine(commandsFactory.buildCommandSpec());
-          int exitCode = commandLine.execute(args);
-
-          assertThat(exitCode).isNotZero();
-          assertThat(outputCaptor.getStandardError()).contains("Could not read ~/.config/seed4j-cli/config.yml.").contains("Details:");
-          assertThat(outputCaptor.getStandardOutput()).doesNotContain("Extension runtime disabled successfully.");
-        }
-
-        assertThat(Files.readString(configPath)).isEqualTo("seed4j: [broken");
-      });
+    assertThat(exitCode).isNotZero();
+    assertThat(output.getErr()).contains("Could not read ~/.config/seed4j-cli/config.yml.").contains("Details:");
+    assertThat(output.getOut()).doesNotContain("Extension runtime disabled successfully.");
+    assertThat(Files.readString(configPath)).isEqualTo("seed4j: [broken");
   }
 
   @Test
-  void shouldReturnNonZeroAndShowObjectiveErrorWhenRuntimeConfigIsInvalidUsingSpringManagedCommandGraph() throws IOException {
-    Path userHome = Files.createTempDirectory("seed4j-cli-extension-install-spring-context-");
-    Path extensionJarPath = createFatJar(userHome.resolve("company-extension.jar"));
-    Path configPath = userHome.resolve(".config/seed4j-cli/config.yml");
+  void shouldReturnNonZeroAndShowObjectiveErrorWhenRuntimeConfigIsInvalidUsingSpringManagedCommandGraph(CapturedOutput output)
+    throws IOException {
+    Path extensionJarPath = createFatJar(USER_HOME.resolve("company-extension.jar"));
+    Path configPath = USER_HOME.resolve(".config/seed4j-cli/config.yml");
     Files.createDirectories(configPath.getParent());
     Files.writeString(
       configPath,
@@ -239,68 +197,25 @@ class Seed4JCommandsSpringContextTest {
       DISTRIBUTION_VERSION,
     };
 
-    contextRunner
-      .withPropertyValues("user.home=" + userHome)
-      .run(context -> {
-        Seed4JCommandsFactory commandsFactory = context.getBean(Seed4JCommandsFactory.class);
+    int exitCode = commandLine().execute(args);
 
-        try (SystemOutputCaptor outputCaptor = new SystemOutputCaptor()) {
-          CommandLine commandLine = new CommandLine(commandsFactory.buildCommandSpec());
-          int exitCode = commandLine.execute(args);
-
-          assertThat(exitCode).isNotZero();
-          assertThat(outputCaptor.getStandardError())
-            .contains("Invalid ~/.config/seed4j-cli/config.yml")
-            .contains("seed4j.runtime.mode must be a string");
-          assertThat(outputCaptor.getStandardOutput()).doesNotContain("Extension runtime installed successfully.");
-        }
-      });
+    assertThat(exitCode).isNotZero();
+    assertThat(output.getErr()).contains("Invalid ~/.config/seed4j-cli/config.yml").contains("seed4j.runtime.mode must be a string");
+    assertThat(output.getOut()).doesNotContain("Extension runtime installed successfully.");
   }
 
   @Test
-  void shouldShowStandardRuntimeInVersionOutputUsingSpringManagedCommandGraph() {
+  void shouldShowStandardRuntimeInVersionOutputUsingSpringManagedCommandGraph(CapturedOutput output) {
     String[] args = { "--version" };
 
-    contextRunner.run(context -> {
-      Seed4JCommandsFactory commandsFactory = context.getBean(Seed4JCommandsFactory.class);
+    int exitCode = commandLine().execute(args);
 
-      try (SystemOutputCaptor outputCaptor = new SystemOutputCaptor()) {
-        CommandLine commandLine = new CommandLine(commandsFactory.buildCommandSpec());
-        int exitCode = commandLine.execute(args);
-
-        assertThat(exitCode).isZero();
-        assertThat(outputCaptor.getStandardOutput())
-          .contains("Runtime mode: standard")
-          .doesNotContain("Distribution ID")
-          .doesNotContain("Distribution version");
-      }
-    });
+    assertThat(exitCode).isZero();
+    assertThat(output.getOut()).contains("Runtime mode: standard").doesNotContain("Distribution ID").doesNotContain("Distribution version");
   }
 
-  @Test
-  void shouldShowExtensionRuntimeDistributionInVersionOutputUsingSpringManagedCommandGraph() {
-    String[] args = { "--version" };
-
-    contextRunner
-      .withPropertyValues(
-        "seed4j.cli.runtime.mode=extension",
-        "seed4j.cli.runtime.distribution.id=" + DISTRIBUTION_ID,
-        "seed4j.cli.runtime.distribution.version=" + DISTRIBUTION_VERSION
-      )
-      .run(context -> {
-        Seed4JCommandsFactory commandsFactory = context.getBean(Seed4JCommandsFactory.class);
-
-        try (SystemOutputCaptor outputCaptor = new SystemOutputCaptor()) {
-          CommandLine commandLine = new CommandLine(commandsFactory.buildCommandSpec());
-          int exitCode = commandLine.execute(args);
-
-          assertThat(exitCode).isZero();
-          assertThat(outputCaptor.getStandardOutput())
-            .contains("Runtime mode: extension")
-            .contains("Distribution ID: " + DISTRIBUTION_ID)
-            .contains("Distribution version: " + DISTRIBUTION_VERSION);
-        }
-      });
+  private CommandLine commandLine() {
+    return new CommandLine(commandsFactory.buildCommandSpec());
   }
 
   private static Path createFatJar(Path jarPath) throws IOException {
@@ -316,39 +231,23 @@ class Seed4JCommandsSpringContextTest {
     return jarPath;
   }
 
-  @Configuration
-  @ComponentScan(
-    basePackages = { "com.seed4j.cli.command", "com.seed4j.cli.bootstrap" },
-    useDefaultFilters = false,
-    includeFilters = {
-      @ComponentScan.Filter(
-        type = FilterType.ASSIGNABLE_TYPE,
-        classes = {
-          Seed4JCommandsFactory.class,
-          ExtensionCommand.class,
-          ExtensionInstallCommand.class,
-          ExtensionEnableCommand.class,
-          ExtensionDisableCommand.class,
-        }
-      ),
-      @ComponentScan.Filter(
-        type = FilterType.REGEX,
-        pattern = {
-          "com\\.seed4j\\.cli\\.command\\.application\\.RuntimeDisplayApplicationService",
-          "com\\.seed4j\\.cli\\.command\\.application\\.RuntimeExtensionInstallApplicationService",
-          "com\\.seed4j\\.cli\\.command\\.application\\.RuntimeExtensionModeApplicationService",
-          "com\\.seed4j\\.cli\\.command\\.infrastructure\\.secondary\\.BootstrapRuntimeDisplayReader",
-          "com\\.seed4j\\.cli\\.command\\.infrastructure\\.secondary\\.BootstrapRuntimeExtensionInstaller",
-          "com\\.seed4j\\.cli\\.command\\.infrastructure\\.secondary\\.BootstrapRuntimeExtensionModeSwitcher",
-          "com\\.seed4j\\.cli\\.bootstrap\\.application\\.RuntimeExtensionApplicationService",
-          "com\\.seed4j\\.cli\\.bootstrap\\.infrastructure\\.primary\\.JavaRuntimeExtensionInstaller",
-          "com\\.seed4j\\.cli\\.bootstrap\\.infrastructure\\.primary\\.JavaRuntimeExtensionModeSwitcher",
-          "com\\.seed4j\\.cli\\.bootstrap\\.infrastructure\\.primary\\.JavaRuntimeSelectionReader",
-          "com\\.seed4j\\.cli\\.bootstrap\\.infrastructure\\.secondary\\.RuntimeExtensionSpringConfiguration",
-          "com\\.seed4j\\.cli\\.bootstrap\\.infrastructure\\.secondary\\.RuntimeSelectionConfiguration",
-        }
-      ),
+  private static Path temporaryDirectory() {
+    try {
+      return Files.createTempDirectory("seed4j-cli-spring-context-");
+    } catch (IOException exception) {
+      throw new UncheckedIOException(exception);
     }
-  )
-  static class ExtensionInstallSpringContextConfiguration {}
+  }
+
+  private static void deleteRecursively(Path path) throws IOException {
+    if (Files.notExists(path)) {
+      return;
+    }
+
+    try (Stream<Path> paths = Files.walk(path)) {
+      for (Path currentPath : paths.sorted(Comparator.reverseOrder()).toList()) {
+        Files.delete(currentPath);
+      }
+    }
+  }
 }
